@@ -17,6 +17,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
+#include <grub/misc.h>
 #include <grub/partition.h>
 #include <grub/disk.h>
 
@@ -103,15 +104,20 @@ grub_partition_iterate (struct grub_disk *disk,
   
   int part_map_iterate (const grub_partition_map_t p)
     {
-      grub_err_t err = p->iterate (disk, part_map_iterate_hook);
+      grub_err_t err;
+
+      grub_dprintf ("partition", "Detecting %s...\n", p->name);
+      err = p->iterate (disk, part_map_iterate_hook);
 
       if (err != GRUB_ERR_NONE)
 	{
 	  /* Continue to next partition map type.  */
+	  grub_dprintf ("partition", "%s detection failed.\n", p->name);
 	  grub_errno = GRUB_ERR_NONE;
 	  return 0;
 	}
 
+      grub_dprintf ("partition", "%s detection succeeded.\n", p->name);
       partmap = p;
       return 1;
     }
